# slash-tokens

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  MEMORY.md  README.md  SECURITY.md  project.faf
.github/workflows/: deploy-site.yml  integration.yml  test.yml
crate/: Cargo.toml  README.md
crate/src/: lib.rs
diagrams/: 1-the-problem.html  2-the-slash-effect.html  3-the-business-model.html  4-the-pitch.html
npm/: CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  TEST-NOTES.md  package.json  project.faf  tsconfig.json
npm/bench/: ANALYSIS.md  REPORT.md  calibrate.ts  corpus.ts  results.json
npm/src/: auto.ts  cli.ts  config.ts  index.ts  intercept.ts  models.ts  patterns.ts  preflight.ts  providers.ts  report.ts  scanner.ts  slash.ts  transact.ts  wasm.ts
npm/tests/: preflight.test.ts  sdk.test.ts  z-integration.test.ts
pypi/: README.md  pyproject.toml
pypi/slash_tokens/: __init__.py
site/: faq.html  index.html
