[package]
name = "slash-tokens"
version = "0.0.2"
edition = "2021"
description = "Token budget estimation in 4.8 KB WASM. Sub-millisecond. Zero dependencies."
readme = "README.md"
repository = "https://github.com/Wolfe-Jam/slash-tokens"
homepage = "https://slashtokens.com"
license = "MIT"
authors = ["wolfejam"]
keywords = ["tokens", "wasm", "edge", "budget", "llm"]
categories = ["wasm", "text-processing"]
